Bypass SOLR-13606 and add port to sample document index call